# SpawnCamper

./: .gitignore  ProcessTracer.slnx  README.md  SpawnCamper.slnx  build.ps1  launcher.ps1
ProcessTracer.Client/: .gitignore  CMakeLists.txt  FindDetours.cmake  FindWil.cmake
ProcessTracer.Client/src/: LoggerClient.hpp  Utils.hpp  Win32.hpp  lib.cpp  main.cpp
ProcessTracer.Server/: ProcessTracer.Server.csproj
ProcessTracer.Server/src/: LogReader.cs  LogServer.cs  NamedPipeServerStreamExtensions.cs  Program.cs
ProcessTracer.Server/src/UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
ProcessTracer.Server/src/UI/Converters/: EnvironmentDifferencesToFlowDocumentConverter.cs  TreeLevelToIndentConverter.cs
ProcessTracer.Server/src/UI/ViewModels/: EnvironmentVariableDifference.cs  MainWindowViewModel.cs  ProcessNodeViewModel.cs  RelayCommand.cs
SpawnCamper.Client/: CMakeLists.txt
SpawnCamper.Client/src/: LoggerClient.hpp  NamedPipeWriter.hpp  NtDll.hpp  Win32.hpp  lib.cpp  main.cpp
SpawnCamper.Server/: SpawnCamper.Server.csproj
SpawnCamper.Server/src/: App.xaml  App.xaml.cs  LogReader.cs  LogServer.cs  MainWindow.xaml  MainWindow.xaml.cs  NamedPipeServerStreamExtensions.cs  Program.cs
SpawnCamper.Server/src/Converters/: EnvironmentDifferencesToFlowDocumentConverter.cs  TreeLevelToIndentConverter.cs
SpawnCamper.Server/src/UI/: MainWindow.xaml  MainWindow.xaml.cs
SpawnCamper.Server/src/UI/ViewModels/: MainWindowViewModel.cs  ProcessNodeViewModel.cs
SpawnCamper.Server/src/Utils/: PowerShellScriptBuilder.cs
SpawnCamper.Server/src/ViewModels/: EnvironmentVariableDifference.cs  MainWindowViewModel.cs  ProcessNodeViewModel.cs  RelayCommand.cs
SpawnCamper.ServerCli/: SpawnCamper.ServerCli.csproj
SpawnCamper.ServerCli/src/: Program.cs
SpawnCamper.ServerCore/: SpawnCamper.ServerCore.csproj
SpawnCamper.ServerCore/src/: LogReader.cs  LogServer.cs  NamedPipeServerStreamExtensions.cs  TracedProcess.cs  TracedProcessTree.cs
SpawnCamper.ServerCore/src/Utils/: Native.cs  Win32.cs
SpawnCamper.Tracer/: CMakeLists.txt
SpawnCamper.Tracer/src/: Utils.hpp  Win32.hpp  lib.cpp
